 + Added a couple new flags
 + Small improvements to the interface and in-game chat
 + Divided teams options will now just be ignored when more/less than 2 teams, instead of displaying a fatal error
 + Added 6 TechRacer maps to TechMaps
 + Added 3 SpeedShoppa Challenges: Shoppa Love, Ropes and Crates, The Customer is King
 + Improved "Art" theme.
 * Generated bridges/girders are now connected better to the land mass
 * Fixed rubberband sprite
 * The game will now fallback to default voicepack if a team's voicepack is not locally installed. (Instead of rendering team voiceless)
 * Many other bug fixes

0.9.20 -> 0.9.21:
 + New type of randomly generated maps: Perlin Maps.
 + Old Random generated maps are more diverse now.
 + Slider for adjusting land generation detail.
 + Highlander gamemode can now be used with custom weapon schemes (1-8=How probable to get this weapon. 9=All hogs get it)
 + New playable themes: "Hoggywood" and "Cake"
 + New gameplay mode "Construction Mode"
 + New gameplay mode "TechRacer"
 + New game play mode "DiagonalMaze" (generates a simple diagonal maze)
 + Add 7 target practice missions, now with simple scoring
 + Update RC Plane Challenge: Stats screen reworked and shows now several facts, simple ranking system based on used planes, some taunts in the game
 + New training/multiplayer mission: "Climb Home"
 + Game scheme screen has a "Script parameter" field now. This allows to make more customizable scripts/modes.
 + Network game rejoining. Note: Your team(s) will vanish after 3 turns.
 + Visual and gameplay changes to "sea" - world edge, visual change to wrap world edge to allow seeing through the wrap, visual change to bounce worldedge 
 + The map of the Basketball Mission can be selected for regular games again ("BasketballField")
 + New engine command: /togglechat will disable/enable chat display (does not affect chat history display)
 + Change to Racer: first weapon/utility available will be automatically selected on start